--- a/Misc/assets/towerlocations.html
+++ b/Misc/assets/towerlocations.html
@@ -15,6 +15,8 @@
 <p>Refreshes the tower information and re-centers the map on the tower.</p>
 <h4>Details</h4>
 <p>Brings up a screen with more information about the tower.</p>
+<h4>Semd SMS</h4>
+<p>Brings up the default SMS messaging application to send a short summary of the current location. Use the back arrow to return to  the map. </p>
 <h4>Help</h4>
 <p>Displays this page. </p>
 </body>
