--- a/Misc/assets/displaymessage.html
+++ b/Misc/assets/displaymessage.html
@@ -6,7 +6,11 @@
 </head>
 <body>
 <h3 align="center">Message</h3>
-<p align="left">This screen displays a message along with its ID, address, time stamp, and body. You can navigate to other messages, delete this one, or fix its time stamp. </p>
+<p align="left">This screen displays a message along with its ID, address,
+and time stamp at the top, and the body at the bottom.
+In between is additional information from the database.
+The extra information and body can be scrolled if necessary.
+You can navigate to other messages, delete this one, or fix its time stamp using menu options. </p>
 
 <h3 align="left">Menu Items </h3>
 <h4>Previous</h4>
@@ -16,9 +20,15 @@
 <h4>Delete</h4>
 <p>Deletes the message and displays the next one.</p>
 <h4>Fix Time </h4>
-<p>Brings up a dialog to set the desired  change for the time stamp in hours and minutes. The intial value for the change is your time zone offset, which is often the correct value. However, you may not want to use that. Whatever time you enter will be remembered for the next time, whether you cancel or not. If you click OK, the changes will be made or simulated, depending on the current setting for Dry Run. </p>
+<p>Brings up a dialog to set the desired  change for the time stamp in hours and minutes.
+The initial value for the change is your time zone offset, which is often the correct value.
+However, you may not want to use that. Whatever time you enter will be remembered for the next time,
+whether you cancel or not. If you click OK, the changes will be made or simulated,
+depending on the current setting for Dry Run. </p>
 <h4>Set Dry Run </h4>
-<p>Allows you to set whether fixing the time will be a dry run or a real change to the database. In the case of a dry run, a popup will inform you of the change that would have been made, but no changes are actually made. </p>
+<p>Allows you to set whether fixing the time will be a dry run or a real change to the database.
+In the case of a dry run, a popup will inform you of the change that would have been made,
+but no changes are actually made. </p>
 <h4>Help</h4>
 <p>Displays this page. </p>
 </body>
