Fixed onSwipe not returning a value. Made swipe be left for next.  Fixed CalendarDay.increment. Added field to save last CalendarPicker value independently of cDay. Fixed setnewImage to be the place where cDay is set. Changes versionCode=2, version = 1.0.1.
git-svn-id: http://svn.kenevans.net/Android/trunk@220 4b487630-4e8c-464e-b16a-428ddfb157b8

--- a/Daily Dilbert/assets/dailydilbert.html
+++ b/Daily Dilbert/assets/dailydilbert.html
@@ -8,7 +8,7 @@
 <h3 align="center">Daily Dilbert </h3>
 <p align="left">This application displays Dilbert comic strips from <a href="http://dilbert.com">dilbert.com</a>. It is a specialized browser in that respect.  It is for your personal use only. It may stop working if the way the strips are stored at dilbert.com changes. The images are subject to the rights and restrictions that may be found at that site. </p>
 <p align="left">The application caches the last 5 strips on the SD card if there is one. Otherwise no strips are saved, and each new one must loaded from the web. If a strip has come from the cache, then its title is white. If it came from the web, then its title is blue. There is  a progress bar when getting strips from the web. It can be cancelled with the back button, but you will probably have to be fast to do so.</p>
-<p align="left"> You can view different strips via the Next, Prev, First, and Today menu items. In addition, there are arrow buttons to go to the next and previous ones. Swiping to the right or left will also go to the next or previous strip. The first strip corresponds to May 16, 1989. </p>
+<p align="left"> You can view different strips via the Next, Prev, First, and Today menu items. In addition, there are arrow buttons to go to the next and previous ones. Swiping to the left or right will also go to the next or previous strip, respectively. The first strip corresponds to May 16, 1989. </p>
 <h3 align="left">Menu Items </h3>
 <h4>Next, Prev, First, Today </h4>
 <p>Get the next, previous, first, or today's strip. </p>
