--- a/Daily Dilbert/assets/dailydilbert.html
+++ b/Daily Dilbert/assets/dailydilbert.html
@@ -8,10 +8,11 @@
 <h3 align="center">Daily Dilbert </h3>
 <p align="left">This application displays Dilbert comic strips from <a href="http://dilbert.com">dilbert.com</a>. It is a specialized browser in that respect.  It is for your personal use only. It may stop working if the way the strips are stored at dilbert.com changes. The images are subject to the rights and restrictions that may be found at that site. </p>
 <p align="left">The application caches the last 5 strips on the SD card if there is one. Otherwise no strips are saved, and each new one must loaded from the web. If a strip has come from the cache, then its title is white. If it came from the web, then its title is blue. There is  a progress bar when getting strips from the web. It can be cancelled with the back button, but you will probably have to be fast to do so.</p>
-<p align="left"> You can view different strips via the Next, Prev, First, and Today menu items. In addition, there are arrow buttons to go to the next and previous ones. Swiping to the left or right will also go to the next or previous strip, respectively. The first strip corresponds to May 16, 1989. </p>
+<p align="left"> You can view different strips via the Next, Prev, First, and Today menu items. In addition, there are arrow buttons to go to the next and previous ones. Swiping to the left or right will also go to the next or previous strip, respectively.</p>
+<p align="left">Clicking anywhere on the left half will go to the previous strip, and clicking anywhere on the right half will go to the next strip. Double clicking will zoom to fit the screen vertically and allow panning horizontally. Use the back button to exit this mode. </p>
 <h3 align="left">Menu Items </h3>
 <h4>Next, Prev, First, Today </h4>
-<p>Get the next, previous, first, or today's strip. </p>
+<p>Get the next, previous, first, or today's strip. The first strip corresponds to May 16, 1989. </p>
 <h4>Date</h4>
 <p>Get the strip for a date you select. </p>
 <h4>Save</h4>
