--- a/Daily Dilbert/assets/dailydilbert.html
+++ b/Daily Dilbert/assets/dailydilbert.html
@@ -6,10 +6,18 @@
 </head>
 <body>
 <h3 align="center">Daily Dilbert </h3>
-<p align="left">This application displays Dilbert comic strips from <a href="http://dilbert.com">dilbert.com</a>. It is a specialized browser in that respect.  It is for your personal use only. It may stop working if the way the strips are stored at dilbert.com changes. The images are subject to the rights and restrictions that may be found at that site. </p>
-<p align="left">The application caches the last 5 strips on the SD card if there is one. Otherwise no strips are saved, and each new one must loaded from the web. If a strip has come from the cache, then its title is white. If it came from the web, then its title is blue. There is  a progress bar when getting strips from the web. It can be cancelled with the back button, but you will probably have to be fast to do so.</p>
-<p align="left"> You can view different strips via the Next, Prev, First, and Today menu items. In addition, there are arrow buttons to go to the next and previous ones. Swiping to the left or right will also go to the next or previous strip, respectively.</p>
-<p align="left">Tapping has the following effects depending on where you tap:</p>
+<p align="left">This application displays Dilbert comic strips from <a href="http://dilbert.com">dilbert.com</a>. It is a specialized browser in that respect and does nothing that cannot be done with a browser. It may stop working if the way the strips are stored at dilbert.com changes.   It is for your personal use only, and the usage and images are subject to the rights and restrictions that may be found at that site. </p>
+<h3 align="left">Levels of Interaction</h3>
+<p align="left">Levels allow you to see the strip at different sizes. Tapping allows you to navigate between strips and levels. The explanations below may seem complicated, but the usage should be simple and intuitive once you try it.</p>
+<p align="left">There are three levels of interaction.  You can navigate between levels by tapping on the horizontal center of the screen as described below. The last used level is remembered  the next time the application is started or resumed.</p>
+<h4 align="left">Level 1</h4>
+<p align="left">The strip is sized to fit the screen and centered. You cannot zoom or move it. Swiping to the right goes to the previous strip, and swiping to the left goes to the next strip. This is  probably the most desirable level unless you have trouble reading the strip. </p>
+<h4 align="left">Level 2 </h4>
+<p align="left">The strip is sized to fit the screen vertically or as large as possible while making at least one third of the strip visible. You can pan horizontally by dragging to read the strip. Swiping does not go to another strip (since it cannot readily be distinguished from panning). Tapping to the right or left is the easiest way to go to another strip in any level. (See below.) </p>
+<h4 align="left">Level 3 </h4>
+<p align="left">You can zoom in and out with two fingers and pan by dragging in any direction. When coming from another level, the zoom and pan state is not changed from that level. When starting at  Level 3, the strip is centered on the screen at its default size. Swiping does not go to another strip for the same reasons as discussed above. </p>
+<h3 align="left">Single and Double Tapping</h3>
+<p align="left">Tapping has the following effects depending on where horizontally  on the screen  you tap. The taps must  also be in the middle third vertically to count. You can thus, for example, keep the device from timing out and shutting off without causing something else to happen by tapping above or below the middle third. Note that it is the horizontal and vertical position on the <em>screen</em>, not on the image. </p>
 <table border="1" cellpadding="5" align="center">
   <tr>
     <th scope="col"><div align="center"></div></th>
@@ -20,17 +28,19 @@
   <tr>
     <th scope="row"><div align="center">Single Tap</div></th>
     <td><div align="center">Previous</div></td>
-    <td><div align="center">Zoom</div></td>
+    <td><div align="center">Next Level </div></td>
     <td><div align="center">Next</div></td>
   </tr>
   <tr>
     <th scope="row"><div align="center">Double Tap</div></th>
     <td><div align="center">First</div></td>
-    <td><div align="center">Full Zoom </div></td>
+    <td><div align="center">Previous Level </div></td>
     <td><div align="center">Today</div></td>
   </tr>
 </table>
-<p align="left">Zoom will fit the screen vertically and allow panning horizontally. It is useful for reading the comic in a larger size, especially when the device is vertical. Full Zoom starts with the original image size and allows manual zooming with two fingers and panning in both directions. It allows more flexibility. Use the back button to exit either of these modes. </p>
+<p align="left">Single or double tapping in the center wraps. If you are at Level 3 and single tap, you will go to Level 1. If you are at Level 1 and double tap, you will go to Level 3. Tapping is the most convenient way to navigate between strips and between levels. </p>
+<h3 align="left">Getting New Strips</h3>
+<p align="left">The application caches the last 5 strips on the SD card if there is one. Otherwise no strips are saved, and each new one must loaded from the web. There is  a progress bar when getting strips from the web. It can be cancelled with the back button, but if you do it too near the time it finishes, pushing the back button may back out of the program instead.</p>
 <h3 align="left">Menu Items </h3>
 <h4>Next, Prev, First, Today </h4>
 <p>Get the next, previous, first, or today's strip. The first strip corresponds to May 16, 1989. </p>
