Added menus to CallHistory.  Did other cleanup and enhancements.  Fixed it to write to the SD card.
git-svn-id: http://svn.kenevans.net/Android/trunk@261 4b487630-4e8c-464e-b16a-428ddfb157b8

--- a/Misc/assets/appinfo.html
+++ b/Misc/assets/appinfo.html
@@ -11,7 +11,7 @@
 <h4>Refresh</h4>
 <p>Refreshes the information.</p>
 <h4>Save To SD Card </h4>
-<p>Saves the information to the SD card. The file is named ApplicationInfo.txt and appears in the root directory of the SD card. It is overwritten each time. If you need to save previous versions, you must do it manually. </p>
+<p>Saves the information to the SD card. The file is named ApplicationInfo.yyyy-MM-dd-HHmmss.txt  and appears in the root directory of the SD card. (yyyy is the year; MM is the month; dd is the day; HH is the hour; mm is the minute; and ss is the second, so the files should sort ordered by the time they were created.)</p>
 <h4>Copy</h4>
 <p>Copies the information to the clipboard, so you can paste it into another application, such as email.</p>
 <h4>Settings</h4>
