Cleaned up and updated the help for DisplayMessageActivity.
git-svn-id: http://svn.kenevans.net/Android/trunk@280 4b487630-4e8c-464e-b16a-428ddfb157b8

--- a/Misc/assets/displaymessage.html
+++ b/Misc/assets/displaymessage.html
@@ -19,6 +19,11 @@ You can navigate to other messages, delete this one, or fix its time stamp using
 <p>Navigates to the next message (up in the list).</p>
 <h4>Delete</h4>
 <p>Deletes the message and displays the next one.</p>
+<h4>Report Spam</h4>
+<p>Report spam  to 7726 (S-P-A-M).  This number is supported by several carriers, among them AT&amp;T, T-Mobile, Verizon, and Sprint, and there is no charge. It is not enough to just forward the message to 7726. They will then ask for the number. Consequently, two messages are sent. The first contains the body of the current message. The second contains the number of the sender of that message.</p>
+<p>It will use your current message sending app, or prompt for which one to use if there is more than one. After using your messaging app to send the first message, use the back button to get to sending the second one. Then use the back button to finish and return to the message display.</p>
+<p> You can cancel by using the back button before choosing which app or by using the back button without sending the message in your messaging app. (It may save it as a draft in the latter case.) You will have to do this for both messages, even if you cancel the first one.</p>
+<p>This may be a little involved, but it is easier than doing it manually, especially for getting the number and sending it.  It is not hard once you try it a few times. It can be a time saver in particular if you have many spam messages to report. </p>
 <h4>Fix Time </h4>
 <p>Brings up a dialog to set the desired  change for the time stamp in hours and minutes.
 The initial value for the change is your time zone offset, which is often the correct value.
