Added From and To strings for SMS messages.  Fixed it to be able to write the contents of SMS messages to a file on the SD card.
git-svn-id: http://svn.kenevans.net/Android/trunk@314 4b487630-4e8c-464e-b16a-428ddfb157b8

--- a/Misc/assets/displaymessage.html
+++ b/Misc/assets/displaymessage.html
@@ -7,11 +7,10 @@
 <body>
 <h3 align="center">Message</h3>
 <p align="left">This screen displays a message along with its ID, address,
-and time stamp at the top, and the body at the bottom.
-In between is additional information from the database.
-The extra information and body can be scrolled if necessary.
-You can navigate to other messages, delete this one, or fix its time stamp using menu options. </p>
-
+  and time stamp at the top, and the body at the bottom.
+  In between is additional information from the database.
+  The extra information and body can be scrolled if necessary.
+  You can navigate to other messages, delete this one, or fix its time stamp using menu options. </p>
 <h3 align="left">Menu Items </h3>
 <h4>Previous</h4>
 <p>Navigates to the previous message (down in the list).</p>
@@ -26,14 +25,18 @@ You can navigate to other messages, delete this one, or fix its time stamp using
 <p>This may be a little involved, but it is easier than doing it manually, especially for getting the number and sending it.  It is not hard once you try it a few times. It can be a time saver in particular if you have many spam messages to report. </p>
 <h4>Fix Time </h4>
 <p>Brings up a dialog to set the desired  change for the time stamp in hours and minutes.
-The initial value for the change is your time zone offset, which is often the correct value.
-However, you may not want to use that. Whatever time you enter will be remembered for the next time,
-whether you cancel or not. If you click OK, the changes will be made or simulated,
-depending on the current setting for Dry Run. </p>
+  The initial value for the change is your time zone offset, which is often the correct value.
+  However, you may not want to use that. Whatever time you enter will be remembered for the next time,
+  whether you cancel or not. If you click OK, the changes will be made or simulated,
+  depending on the current setting for Dry Run. </p>
 <h4>Set Dry Run </h4>
 <p>Allows you to set whether fixing the time will be a dry run or a real change to the database.
-In the case of a dry run, a popup will inform you of the change that would have been made,
-but no changes are actually made. </p>
+  In the case of a dry run, a popup will inform you of the change that would have been made,
+  but no changes are actually made. </p>
+<h4>Save Text to SD Card</h4>
+<p>Saves this message to a file named SavedMessageText.txt on the SD card. Successive messages are appended to what is there. Does nothing if there is no SD card. </p>
+<h4>Clear Text on SD Card</h4>
+<p>Clears the contents of SavedMessageText.txt on the SD card. Creates a new, cleared file if none existed. Does nothing if there is no SD card. </p>
 <h4>Help</h4>
 <p>Displays this page. </p>
 </body>
