Fixed a bug that CallHistoryActivity was using DisplayMessageActivity and not DisplayCallActivity.  Added RAM to the memory info. Deleted MemoryUtils and implemented one routine in AppsActivity.  Did some cleanup.  Changed the versionName to 1.2.0 and the versionCode to 6.
git-svn-id: http://svn.kenevans.net/Android/trunk@401 4b487630-4e8c-464e-b16a-428ddfb157b8

--- a/Misc/assets/appinfo.html
+++ b/Misc/assets/appinfo.html
@@ -18,6 +18,7 @@
 <p>Allows you to change the settings: </p>
 <ul>
   <li>Show Build Info</li>
+  <li>Show Memory Info </li>
   <li>Show Downloaded Applications</li>
   <li>Show System Applications</li>
 </ul>
